--- a/topeducation/templates/posts/index.html
+++ b/topeducation/templates/posts/index.html
@@ -68,8 +68,9 @@
           </td>
           <td class="p-2">
             <div class="flex gap-2">
+              <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="https://top.education/recursos/{{ post.slug }}" target="_blank" title="Ver en página"><i class="fa-regular fa-eye"></i></a>
               <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'updatePost' post.id %}"><i class="fa-regular fa-pen-to-square"></i></a>
-              <a class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'deletePost' post.id %}"><i class="fa-regular fa-trash-can"></i></a>
+              <button onclick="openDeleteModal({{ post.id }})" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full" > <i class="fa-regular fa-trash-can"></i> </button>
             </div>
             </td>
         </tr>
@@ -78,5 +79,32 @@
       </tbody>
     </table>
   </div>
-  
+  <!-- Modal de confirmación -->
+  <div id="deleteModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center hidden z-50">
+    <div class="bg-white p-6 rounded-lg shadow-lg text-center w-80">
+      <p class="text-lg font-semibold mb-4">¿Estás seguro de que deseas eliminar este blog?</p>
+      <div class="flex justify-center gap-4">
+        <button onclick="closeModal()" class="bg-gray-300 hover:bg-gray-400 px-4 py-2 rounded">Cancelar</button>
+        <form id="deleteForm" method="post" action="">
+          {% csrf_token %}
+          <button type="submit" class="bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded">Eliminar</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function openDeleteModal(postId) {
+      const modal = document.getElementById("deleteModal");
+      const form = document.getElementById("deleteForm");
+
+      // Setea la URL del form
+      form.action = `/posts/${postId}/delete/`;  // Asegúrate de que coincida con tu URL
+      modal.classList.remove("hidden");
+    }
+
+    function closeModal() {
+      document.getElementById("deleteModal").classList.add("hidden");
+    }
+  </script>
 {% endblock %}
