Verificación de googles console backend

--- a/topeducation/templates/base.html
+++ b/topeducation/templates/base.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="5ldRGz6YBhz4b8M6_bfGRhBAJUYvQwvUOFMfeaZAFro" />
+
     <link rel="icon" href="https://top.education/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>{% block title %}  {% endblock %} | Top.Education</title>
@@ -11,7 +13,6 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/2.3.1/css/dataTables.dataTables.css" />
     <link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
     <script src="https://cdn.datatables.net/2.3.1/js/dataTables.js"></script>
-    
     
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.3.0/css/all.css">
     <script src="https://cdn.ckeditor.com/ckeditor5/35.4.0/classic/ckeditor.js"></script>
