Actualización originals back

--- a/topeducation/templates/certifications/index.html
+++ b/topeducation/templates/certifications/index.html
@@ -97,7 +97,7 @@
           </td>
           <td class="p-2">
             <p class="text-sm">
-                {{ certification.fecha_creado }}
+                {{ certification.fecha_creado_cert }}
             </p>
           </td>
           <td class="p-2">
