--- a/topeducation/templates/category/universities/form.html
+++ b/topeducation/templates/category/universities/form.html
@@ -5,34 +5,11 @@
     <!-- Primera columna: ocupa 1/3 -->
     <div class="col-span-3 grid grid-cols-2 gap-4">
       {% for field in form %}
-        {% if field.name == "nombre" or field.name == "slug" or field.name == "aprendizaje_certificacion" or field.name == "habilidades_certificacion" or field.name == "experiencia_certificacion" or field.name == "testimonios_certificacion" or field.name == "contenido_certificacion" or field.name == "modulos_certificacion" %}
+        {% if field.name == "nombre" or field.name == "univ_img" or field.name == "univ_ico" or field.name == "univ_fla" %}
           <div class="{% if field.name == 'contenido_certificacion' or field.name == 'modulos_certificacion' %}col-span-full{% endif %}">
             <label class="text-white font-bold" for="{{ field.id_for_label }}">{{ field.label }}</label>
 
-            {% if field.name == "contenido_certificacion" or field.name == "modulos_certificacion" %}
-              <textarea class="w-full border-1 border-white rounded-lg px-4 py-1" name="{{ field.name }}" id="{{ field.id_for_label }}" rows="4">{{ field.value|safe }}</textarea>
-            {% else %}
-              {{ field }}
-            {% endif %}
-
-            {% if field.errors %}
-              <div class="text-danger text-white">{{ field.errors }}</div>
-            {% endif %}
-          </div>
-        {% endif %}
-      {% endfor %}
-    </div>
-
-    <!-- Segunda columna: ocupa 2/3 -->
-    <div class="col-span-1 grid grid-cols-1 gap-4">
-        <div>
-      {% for field in form %}
-        {% if field.name != "nombre" and field.name != "slug" and field.name != "aprendizaje_certificacion" and field.name != "habilidades_certificacion" and field.name != "experiencia_certificacion" and field.name != "testimonios_certificacion" and field.name != "contenido_certificacion" and field.name != "modulos_certificacion" %}
-
-          <div class="col-span-1">
-            <label class="text-white font-bold" for="{{ field.id_for_label }}">{{ field.label }}</label>
-
-            {% if field.name == "imagen_final" %}
+            {% if field.name == "univ_img" or field.name == "univ_ico" or field.name == "univ_fla" %}
               {% if field.value %}
                 <img class="bg-white rounded-lg mb-2" src="https://top.education/{{ field.value }}" width="180" />
               {% endif %}
@@ -51,13 +28,46 @@
           </div>
         {% endif %}
       {% endfor %}
+    </div>
+
+    <!-- Segunda columna: ocupa 2/3 -->
+    <div class="col-span-1 grid grid-cols-1 gap-4">
+        <div>
+      {% for field in form %}
+        {% if field.name != "nombre" and field.name != "univ_img" and field.name != "univ_ico" and field.name != "univ_fla" %}
+
+          <div class="col-span-1">
+            <label class="text-white font-bold" for="{{ field.id_for_label }}">{{ field.label }}</label>
+
+            {% if field.name == "imagen_final" %}
+              {% if field.value %}
+                <img class="bg-white rounded-lg mb-2" src="https://top.education/{{ field.value }}" width="180" />
+              {% endif %}
+              <input class="w-full border-1 border-white rounded-lg px-4 py-1" type="text" name="{{ field.name }}" id="{{ field.id_for_label }}" value="{{ field.value }}">
+            
+            {% elif field.name == "univ_est" %}
+              <select name="{{ field.name }}" id="{{ field.id_for_label }}">
+                <option {% if field.value == "enabled" %} selected {% endif %}>enabled</option>
+                <option {% if field.value == "disabled" %} selected {% endif %}>disabled</option>
+              </select>
+            
+            {% else %}
+              {{ field }}
+            {% endif %}
+
+            {% if field.errors %}
+              <div class="text-danger text-white">{{ field.errors }}</div>
+            {% endif %}
+          </div>
+        {% endif %}
+      {% endfor %}
         </div>
     </div>
   </div>
 
   <div class="flex gap-3 w-full mt-8">
     <input class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg" value="Actualizar" type="submit" />
-    <a class="bg-neutral-500 hover:bg-neutral-400 text-neutral-950 font-bold py-2 px-4 rounded-lg" href="{% url 'posts' %}">Cancelar</a>
+    <a class="bg-neutral-500 hover:bg-neutral-400 text-neutral-950 font-bold py-2 px-4 rounded-lg" href="{% url 'universities' %}">Cancelar</a>
   </div>
 </form>
 
