Actualización general de back

--- a/topeducation/templates/base.html
+++ b/topeducation/templates/base.html
@@ -44,7 +44,7 @@
     .ck h4{
         font-weight: bold !important;
     }
-    .cont-form input[type=text],.cont-form input[type=date], .cont-form select,.cont-form textarea{
+    .cont-form input[type=text],.cont-form input[type=date], .cont-form select,.cont-form textarea,.cont-form input[type=number]{
         width: 100%;
         padding: 5px 10px;
         border-radius: 10px;
