--- a/topeducation/templates/category/companies/index.html
+++ b/topeducation/templates/category/companies/index.html
@@ -5,7 +5,7 @@
 
 {% block botons %}
 <p class="text-white">Total de empresas: {{ companies|length }}</p>
-<a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'createCertification' %}">Crear nueva</a> {% endblock %}
+<a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'createCompany' %}">Crear nueva</a> {% endblock %}
 
 {% block content %} 
 <div class="relative flex flex-col w-full h-full text-neutral-100 bg-neutral-800 shadow-md rounded-lg bg-clip-border">
