--- a/topeducation/templates/category/originals/index.html
+++ b/topeducation/templates/category/originals/index.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 
-{% block title %} Universidades {% endblock %}
-{% block header %} Universidades {% endblock %}
+{% block title %} Originals {% endblock %}
+{% block header %} Originals {% endblock %}
 
 {% block botons %}
-<p class="text-white">Total de universidades: {{ universities|length }}</p>
-<a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'createUniversity' %}">Crear nueva</a> {% endblock %}
+<p class="text-white">Total de Originals: {{ originals|length }}</p>
+<a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'createOriginal' %}">Crear nuevo</a> {% endblock %}
 
-{% block content %} 
+{% block content %}
 <div class="relative flex flex-col w-full h-full text-neutral-100 bg-neutral-800 shadow-md rounded-lg bg-clip-border">
   <script>
     $(document).ready(function(){
       $('#example').DataTable();
     })
   </script>
-    <table class="w-full text-left table-auto max-w-max text-neutral-200" id="example">
+    <table class="!w-full text-left table-auto max-w-max text-neutral-200" id="example">
       <thead>
         <tr class="text-neutral-300 border-b border-neutral-500 bg-neutral-500">
             <th class="p-4">
@@ -29,7 +29,7 @@
           </th>
           <th class="p-4">
             <p class="text-sm leading-none">
-              Región
+              Slug
             </p>
           </th>
           <th class="p-4">
@@ -39,17 +39,7 @@
           </th>
           <th class="p-4">
             <p class="text-sm leading-none">
-              Icono
-            </p>
-          </th>
-          <th class="p-4">
-            <p class="text-sm leading-none">
               Estado
-            </p>
-          </th>
-          <th class="p-4">
-            <p class="text-sm leading-none ">
-              Top
             </p>
           </th>
           <th class="p-4">
@@ -58,47 +48,37 @@
         </tr>
       </thead>
       <tbody>
-        {% for university in universities %}
+        {% for original in originals %}
         <tr class="hover:bg-neutral-500">
             <td class="p-2">
                 <p class="text-sm font-bold">
-                 {{ university.id }}
+                 {{ original.id }}
                 </p>
             </td>
           <td class="p-2">
             <p class="text-sm font-bold">
-             {{ university.nombre }}
+             {{ original.name }}
+            </p>
+          </td>          
+          <td class="p-2">
+            <p class="text-sm">
+                {{ original.slug }}
             </p>
           </td>
           <td class="p-2">
             <p class="text-sm">
-                {{ university.region }}
+                {{ original.image }}
             </p>
           </td>
           <td class="p-2">
             <p class="text-sm">
-                {{ university.univ_img }}
-            </p>
-          </td>
-          <td class="p-2">
-            <p class="text-sm">
-                {{ university.univ_ico }}
-            </p>
-          </td>
-          <td class="p-2">
-            <p class="text-sm">
-              {{ university.univ_est }}
-            </p>
-          </td>
-          <td class="p-2">
-            <p class="text-sm">
-                {{ university.univ_top }}
+                {{ original.esta }}
             </p>
           </td>
           <td class="p-2">
             <div class="flex gap-2">
-              <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'updateUniversity' university.id %}" title="Editar"><i class="fa-regular fa-pen-to-square"></i></a>
-              <button onclick="openDeleteModal({{ university.id }})" class="bg-red-500 hover:bg-red-700 text-white cursor-pointer font-bold py-2 px-4 rounded-full" title="Eliminar" > <i class="fa-regular fa-trash-can"></i> </button>
+              <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'updateOriginal' original.id %}" title="Editar"><i class="fa-regular fa-pen-to-square"></i></a>
+              <button onclick="openDeleteModal({{ original.id }})" class="bg-red-500 hover:bg-red-700 text-white cursor-pointer font-bold py-2 px-4 rounded-full" title="Eliminar" > <i class="fa-regular fa-trash-can"></i> </button>
             </div>
           </td>
         </tr>
