--- a/topeducation/templates/category/rankings/index.html
+++ b/topeducation/templates/category/rankings/index.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %} Universidades {% endblock %}
-{% block header %} Universidades {% endblock %}
+{% block title %} Rankings {% endblock %}
+{% block header %} Rankings {% endblock %}
 
 {% block botons %}
-<p class="text-white">Total de universidades: {{ universities|length }}</p>
-<a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'createUniversity' %}">Crear nueva</a> {% endblock %}
+<p class="text-white">Total de Rankings: {{ rankings |length }}</p>
+<a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'createRanking' %}">Crear nuevo</a> {% endblock %}
 
 {% block content %} 
 <div class="relative flex flex-col w-full h-full text-neutral-100 bg-neutral-800 shadow-md rounded-lg bg-clip-border">
@@ -17,11 +17,11 @@
     <table class="w-full text-left table-auto max-w-max text-neutral-200" id="example">
       <thead>
         <tr class="text-neutral-300 border-b border-neutral-500 bg-neutral-500">
-            <th class="p-4">
-                <p class="text-sm leading-none">
-                  #
-                </p>
-              </th>
+          <th class="p-4">
+            <p class="text-sm leading-none">
+              #
+            </p>
+          </th>
           <th class="p-4">
             <p class="text-sm leading-none">
               Nombre
@@ -29,17 +29,7 @@
           </th>
           <th class="p-4">
             <p class="text-sm leading-none">
-              Región
-            </p>
-          </th>
-          <th class="p-4">
-            <p class="text-sm leading-none">
-              Imagen
-            </p>
-          </th>
-          <th class="p-4">
-            <p class="text-sm leading-none">
-              Icono
+              Tipo
             </p>
           </th>
           <th class="p-4">
@@ -48,8 +38,8 @@
             </p>
           </th>
           <th class="p-4">
-            <p class="text-sm leading-none ">
-              Top
+            <p class="text-sm leading-none">
+              Fecha
             </p>
           </th>
           <th class="p-4">
@@ -58,47 +48,37 @@
         </tr>
       </thead>
       <tbody>
-        {% for university in universities %}
+        {% for ranking in rankings %}
         <tr class="hover:bg-neutral-500">
             <td class="p-2">
                 <p class="text-sm font-bold">
-                 {{ university.id }}
+                 {{ ranking.id }}
                 </p>
             </td>
           <td class="p-2">
             <p class="text-sm font-bold">
-             {{ university.nombre }}
+             {{ ranking.nombre }}
+            </p>
+          </td>          
+          <td class="p-2">
+            <p class="text-sm">
+                {{ ranking.tipo }}
             </p>
           </td>
           <td class="p-2">
             <p class="text-sm">
-                {{ university.region }}
+                {{ ranking.estado }}
             </p>
           </td>
           <td class="p-2">
             <p class="text-sm">
-                {{ university.univ_img }}
-            </p>
-          </td>
-          <td class="p-2">
-            <p class="text-sm">
-                {{ university.univ_ico }}
-            </p>
-          </td>
-          <td class="p-2">
-            <p class="text-sm">
-              {{ university.univ_est }}
-            </p>
-          </td>
-          <td class="p-2">
-            <p class="text-sm">
-                {{ university.univ_top }}
+                {{ ranking.fecha }}
             </p>
           </td>
           <td class="p-2">
             <div class="flex gap-2">
-              <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'updateUniversity' university.id %}" title="Editar"><i class="fa-regular fa-pen-to-square"></i></a>
-              <button onclick="openDeleteModal({{ university.id }})" class="bg-red-500 hover:bg-red-700 text-white cursor-pointer font-bold py-2 px-4 rounded-full" title="Eliminar" > <i class="fa-regular fa-trash-can"></i> </button>
+              <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'updateRanking' ranking.id %}" title="Editar"><i class="fa-regular fa-pen-to-square"></i></a>
+              <button onclick="openDeleteModal({{ ranking.id }})" class="bg-red-500 hover:bg-red-700 text-white cursor-pointer font-bold py-2 px-4 rounded-full" title="Eliminar" > <i class="fa-regular fa-trash-can"></i> </button>
             </div>
           </td>
         </tr>
