--- a/topeducation/templates/category/tags/index.html
+++ b/topeducation/templates/category/tags/index.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %} Universidades {% endblock %}
-{% block header %} Universidades {% endblock %}
+{% block title %} Categoria de blog {% endblock %}
+{% block header %} Categoria de blog {% endblock %}
 
 {% block botons %}
-<p class="text-white">Total de universidades: {{ universities|length }}</p>
-<a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'createUniversity' %}">Crear nueva</a> {% endblock %}
+<p class="text-white">Total de Categoria de blog: {{ tags|length }}</p>
+<a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'createTag' %}">Crear nueva</a> {% endblock %}
 
 {% block content %} 
 <div class="relative flex flex-col w-full h-full text-neutral-100 bg-neutral-800 shadow-md rounded-lg bg-clip-border">
@@ -29,27 +29,7 @@
           </th>
           <th class="p-4">
             <p class="text-sm leading-none">
-              Región
-            </p>
-          </th>
-          <th class="p-4">
-            <p class="text-sm leading-none">
-              Imagen
-            </p>
-          </th>
-          <th class="p-4">
-            <p class="text-sm leading-none">
-              Icono
-            </p>
-          </th>
-          <th class="p-4">
-            <p class="text-sm leading-none">
               Estado
-            </p>
-          </th>
-          <th class="p-4">
-            <p class="text-sm leading-none ">
-              Top
             </p>
           </th>
           <th class="p-4">
@@ -58,47 +38,27 @@
         </tr>
       </thead>
       <tbody>
-        {% for university in universities %}
+        {% for tag in tags %}
         <tr class="hover:bg-neutral-500">
             <td class="p-2">
                 <p class="text-sm font-bold">
-                 {{ university.id }}
+                 {{ tag.id }}
                 </p>
             </td>
           <td class="p-2">
             <p class="text-sm font-bold">
-             {{ university.nombre }}
+             {{ tag.nombre_categoria_blog }}
             </p>
-          </td>
+          </td>          
           <td class="p-2">
             <p class="text-sm">
-                {{ university.region }}
-            </p>
-          </td>
-          <td class="p-2">
-            <p class="text-sm">
-                {{ university.univ_img }}
-            </p>
-          </td>
-          <td class="p-2">
-            <p class="text-sm">
-                {{ university.univ_ico }}
-            </p>
-          </td>
-          <td class="p-2">
-            <p class="text-sm">
-              {{ university.univ_est }}
-            </p>
-          </td>
-          <td class="p-2">
-            <p class="text-sm">
-                {{ university.univ_top }}
+                {{ tag.tem_est }}
             </p>
           </td>
           <td class="p-2">
             <div class="flex gap-2">
-              <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'updateUniversity' university.id %}" title="Editar"><i class="fa-regular fa-pen-to-square"></i></a>
-              <button onclick="openDeleteModal({{ university.id }})" class="bg-red-500 hover:bg-red-700 text-white cursor-pointer font-bold py-2 px-4 rounded-full" title="Eliminar" > <i class="fa-regular fa-trash-can"></i> </button>
+              <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href="{% url 'updateTag' tag.id %}" title="Editar"><i class="fa-regular fa-pen-to-square"></i></a>
+              <button onclick="openDeleteModal({{ tag.id }})" class="bg-red-500 hover:bg-red-700 text-white cursor-pointer font-bold py-2 px-4 rounded-full" title="Eliminar" > <i class="fa-regular fa-trash-can"></i> </button>
             </div>
           </td>
         </tr>
